# i-learn-robotframework

./: .env  .gitignore  README.md  init_robot_project.py  log.html  pyproject.toml  report.html  requirements.txt  robot.yaml
external_lib/myutils/: helper.py  pyproject.toml
libs/myutils/: MyUtils.py  pyproject.toml
libs/myutils/myutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
selenium-python-prune/: 001-first-sample.md  002-selenim-with-a-lib-test.md  002-selenim-with-a-lib-test.py  003-selenium-options.py  004_wait_implicit_explicit.py  005-locator-by-id.py  006-locator-by-name.py  007-locator-by-link-ext.py  008-locator-by-partial-link-text.py  009-locator-by-tag-name.py  010-locator-by-xpath.py  011-locator-by-css.py  012-locator-relative-above.py  013-locator-relative-below.py  014-locator-shadowdom.py  package_test.py
tests/: 010_extend_lib.robot  transfer_test.robot
tests/002_create_test_case/: 01_basic_syntax.robot  02_setting_in_test_case copy.robot  03_using_arguments copy.robot  04_failures.robot  05_tag_test.robot  06_setup_teardown.robot  08_template_test.robot  09_template_test _embbed_arguments.robot
tests/003_testing_library/: 01_library_setting.robot
tests/004_variables.robot/: list_variable.robot
tests/006_keyword_creating/: behavior_driven_development.robot  regular_expression_embedded.robot  return_value.robot
tests/selenium/: 02.robot
