[project]
name = "i-learn-robotframework"
version = "0.1.0"
description = ""
authors = [
    {name = "xuantrangk54"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "robotframework-seleniumlibrary (>=6.8.0,<7.0.0)",
    "robotframework-requests (>=0.9.7,<0.10.0)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "selenium (>=4.37.0,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry.dependencies]
python = "^3.11"
myutils = { path = "external_lib/myutils",develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
