[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myutils"
version = "0.1.0"
description = "A simple utility package"
authors = [
    {name = "xuantrangk54"}
]
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]